apps/20-media/sabnzbd/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: sabnzbd
  type: ClusterIP
